# robots_algoritme

./: CMakeLists.txt  Doxyfile  README.md
batch/: batchfile.ini
calibration/: calibration.ini
doxygen/html/: Application_8hpp_source.html  BatchApplication_8hpp_source.html  CalibrationMode_8hpp_source.html  Detection_8hpp_source.html  Extraction_8hpp_source.html  FilterExecutor_8hpp_source.html  InteractiveApplication_8hpp_source.html  Parser_8hpp_source.html  SpecificationConfig_8hpp_source.html  Specification_8hpp_source.html  annotated.html  classApplication-members.html  classApplication.html  classApplication__coll__graph.map  classApplication__coll__graph.md5  classApplication__inherit__graph.map  classApplication__inherit__graph.md5  classBatchApplication-members.html  classBatchApplication.html  classBatchApplication__coll__graph.map  classBatchApplication__coll__graph.md5  classBatchApplication__inherit__graph.map  classBatchApplication__inherit__graph.md5  classCalibrationMode-members.html  classCalibrationMode.html  classCalibrationMode__coll__graph.map  classCalibrationMode__coll__graph.md5  classCalibrationMode__inherit__graph.map  classCalibrationMode__inherit__graph.md5  (+48 more)
src/: Application.cpp  Application.hpp  BatchApplication.cpp  BatchApplication.hpp  CalibrationMode.cpp  CalibrationMode.hpp  Detection.cpp  Detection.hpp  Extraction.cpp  Extraction.hpp  FilterExecutor.cpp  FilterExecutor.hpp  InteractiveApplication.cpp  InteractiveApplication.hpp  Parser.cpp  Parser.hpp  Specification.cpp  Specification.hpp  SpecificationConfig.hpp  main.cpp
(+66 files in other folders)
